# exgui

./: .gitignore  Cargo.toml  README.md  mix.exs
config/: config.exs
lib/: editor.ex  exgui.ex
native/editor/: Cargo.toml  README.md
native/editor/src/: gui.rs  main.rs  nifs.rs
native/exgui/: Cargo.toml  README.md
native/exgui/src/: lib.rs
test/: editor_test.exs  exgui_test.exs
