[package]
authors = []
edition = "2021"
name = "editor"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "editor"
path = "src/nifs.rs"

[[bin]]
name = "editor"
path = "src/gui.rs"

[dependencies]
eframe = {git = "https://github.com/emilk/egui.git", rev = "eb0812a9", default-features = false, features = ["default_fonts", "glow", "persistence"]}
egui = {git = "https://github.com/emilk/egui.git", rev = "eb0812a9"}
itertools = "0.10.5"
rustler = "0.27.0"
serde = {version = "1", features = ["derive"]}
